--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "md-links",
+  "type": "module",
   "version": "0.1.0",
   "engines": {
     "node": ">=16.x"
@@ -8,5 +9,11 @@
     "createdAt": "2023-09-04T18:43:43.114Z",
     "version": "6.7.0",
     "commit": "1e61f863787ca573e7e7235dfba9b94c0a4efae3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "start": "node --experimental-modules index.mjs"
   }
 }
