--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "md-links",
   "type": "module",
+  "sourceType": "module",
   "version": "0.1.0",
   "engines": {
     "node": ">=16.x"
@@ -11,9 +12,14 @@
     "commit": "1e61f863787ca573e7e7235dfba9b94c0a4efae3"
   },
   "devDependencies": {
+    "eslint": "^8.50.0",
     "jest": "^29.7.0"
   },
+  "dependencies": {
+    "axios": "^1.5.0"
+  },
   "scripts": {
-    "start": "node --experimental-modules index.mjs"
+    "start": "node index.js",
+    "test": "jest --coverage"
   }
 }
