--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "commit": "1e61f863787ca573e7e7235dfba9b94c0a4efae3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
     "eslint": "^8.50.0",
     "jest": "^29.7.0"
   },
@@ -21,5 +24,10 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest --coverage"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
