--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "axios-mock-adapter": "^1.22.0",
+    "chalk": "^5.3.0"
   },
   "scripts": {
     "start": "node index.js",
