--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "axios": "^1.5.0",
     "axios-mock-adapter": "^1.22.0",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "colors": "^1.4.0",
+    "figlet": "^1.6.0",
+    "inquirer": "^9.2.11"
   },
   "scripts": {
     "start": "node index.js",
@@ -31,5 +34,8 @@
     "transform": {
       "^.+\\.js$": "babel-jest"
     }
+  },
+  "bin": {
+    "md-links": "./cli.js"
   }
 }
